<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idTiltle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idSubTiltle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/String_SubTitle"
        app:layout_constraintEnd_toEndOf="@+id/idTiltle"
        app:layout_constraintStart_toStartOf="@+id/idTiltle"
        app:layout_constraintTop_toBottomOf="@+id/idTiltle" />

    <ImageView
        android:id="@+id/idIcon"
        android:layout_width="124dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSubTiltle"
        app:srcCompat="@drawable/ic_houses_256" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIcon">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/String_google"
            android:textColor="@color/black"
            app:icon="@drawable/ic_google_128"
            app:iconGravity="start"
            app:iconPadding="16dp"
            app:iconSize="38dp"
            app:iconTint="@null"


            />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/String_fb"
            android:textColor="@color/white"
            app:backgroundTint="@color/blue_dark"
            app:icon="@drawable/ic_fb_128"
            app:iconGravity="start"
            app:iconPadding="16dp"
            app:iconSize="38dp"
            app:iconTint="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/idMidLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterOverflowTextAppearance="@style/CounterOverFlow"
            app:counterTextAppearance="@style/CounterText"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_user"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:counterOverflowTextAppearance="@style/CounterOverFlow"
            app:counterTextAppearance="@style/CounterText"
            app:hintTextAppearance="@style/HintText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_200"
            android:inputType="textPassword"
            android:maxWidth="320dp"
            android:minWidth="200dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/String_pwd">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:textStyle="bold"
            android:text="@string/String_forgotpwd" />
        
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_login"/>



    </LinearLayout>

    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/String_noAccount"
        app:layout_constraintEnd_toEndOf="@+id/idMidLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idMidLayout"
        app:layout_constraintTop_toBottomOf="@+id/idMidLayout"/>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/String_signup"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idMidLayout"
        app:layout_constraintTop_toTopOf="@+id/txtNoAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>